# XrayDetector

XrayDetector_v2/: CMakeCache.txt  CMakeLists.txt  init_vis.mac  main.cc  run.mac  vis.mac
XrayDetector_v2/include/: ActionInitialization.hh  DetectorConstruction.hh  EnergyDistribution.hh  EventAction.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh_2  RunAction.hh  SteppingAction.hh
XrayDetector_v2/src/: ActionInitialization.cc  DetectorConstruction.cc  EnergyDistribution.cc  EventAction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc_1  PrimaryGeneratorAction.cc_3  RunAction.cc  RunAction.cc_1  SteppingAction.cc
